fix: align footer with content

--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -18,8 +18,13 @@ main
 
 footer
   margin-top: 2em
-  padding: 1.5em 2em
+  padding: 1.5em 0
   flex-shrink: 0
+
+  div.footer-inner
+    max-width: $max-two-col-width
+    width: 90%
+    margin: auto
 
 // offset anchors
 :target:before
